--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Acme-Automatix
 
-0.01    Date/time
+
+0.02    18h33 17/03/2021
+        Release automatix!
+
+0.01    12h33 17/03/2021
         First version, released on an unsuspecting world.
 
