This is automatix :robot:

--- a/README
+++ b/README
@@ -1,20 +1,12 @@
 Acme-Automatix
 
-The README is used to introduce the module and provide instructions on
-how to install the module, any machine dependencies it may have (for
-example C compilers and installed libraries) and any other information
-that should be provided before the module is installed.
+This is a toy module just used to test [Github action "upload-to-cpan"](https://github.com/thibaultduponchelle/upload-to-cpan)
 
-A README file is required for CPAN modules since CPAN extracts the README
-file from a module distribution so that people browsing the archive
-can use it to get an idea of the module's uses. It is usually a good idea
-to provide version information here so that people can decide whether
-fixes for the module are worth downloading.
-
+The release is *automatix*! :D
 
 INSTALLATION
 
-To install this module, run the following commands:
+To install this module (that actually has no goal), run the following commands:
 
 	perl Makefile.PL
 	make
@@ -23,22 +15,7 @@ To install this module, run the following commands:
 
 SUPPORT AND DOCUMENTATION
 
-After installing, you can find documentation for this module with the
-perldoc command.
-
-    perldoc Acme::Automatix
-
-You can also look for information at:
-
-    RT, CPAN's request tracker (report bugs here)
-        https://rt.cpan.org/NoAuth/Bugs.html?Dist=Acme-Automatix
-
-    CPAN Ratings
-        https://cpanratings.perl.org/d/Acme-Automatix
-
-    Search CPAN
-        https://metacpan.org/release/Acme-Automatix
-
+You also look for information at [Acme-Automatix](https://github.com/thibaultduponchelle/Acme-Automatix) or [Github action "upload-to-cpan"](https://github.com/thibaultduponchelle/upload-to-cpan)
 
 LICENSE AND COPYRIGHT
 
@@ -47,4 +24,3 @@ This software is Copyright (c) 2021 by Thibault Duponchelle.
 This is free software, licensed under:
 
   The Artistic License 2.0 (GPL Compatible)
-
