--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 Revision history for Acme-Automatix
 
+0.03    18h57 17/03/2021
+        Release (once again) automatix!
 
 0.02    18h33 17/03/2021
         Release automatix!
