:octocat: Github url as repo + better doc :clipboard:

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Acme-Automatix
 
+0.04    19h12 17/03/2021
+        Release is still automatix!
+
 0.03    18h57 17/03/2021
         Release (once again) automatix!
 
