:octocat: Release me!

--- a/Changes
+++ b/Changes
@@ -1,5 +1,12 @@
 Revision history for Acme-Automatix
 
+
+0.06    19h12 25/03/2021
+        Release is still automatix!
+
+0.05    19h12 23/03/2021
+        Release is still automatix!
+
 0.04    19h12 17/03/2021
         Release is still automatix!
 
