--- a/Changes
+++ b/Changes
@@ -1,5 +1,19 @@
 Revision history for Acme-Automatix
 
+0.11    19h12 25/03/2021
+        Release is still automatix!
+
+0.10    19h12 25/03/2021
+        Release is still automatix!
+
+0.09    19h12 25/03/2021
+        Release is still automatix!
+
+0.08    19h12 25/03/2021
+        Release is still automatix!
+
+0.07    19h12 25/03/2021
+        Release is still automatix!
 
 0.06    19h12 25/03/2021
         Release is still automatix!
